--- a/src/test/resources/extent.properties
+++ b/src/test/resources/extent.properties
@@ -1,4 +1,5 @@
 basefolder.name=test-output/ExtentReport
+basefolder.datetimepattern=d-MMM-YY HH-mm-ss
 extent.reporter.spark.start=true
 extent.reporter.spark.out=SparkReport/Spark.html
 screenshot.dir=SparkReport/screenshots
